--- a/refract-docs/blog/2021-08-01-mdx-blog-post.mdx
+++ b/refract-docs/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,24 +1,35 @@
 ---
 slug: mdx-blog-post
-title: MDX Blog Post
+title: Refract Releases
 authors: [slorber]
 tags: [docusaurus]
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+Our Pledge​
+In the interest of fostering an open and welcoming environment, we as contributors and maintainers pledge to making participation in our project and our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, sex characteristics, gender identity and expression, level of experience, education, socio-economic status, nationality, personal appearance, race, religion, political party, or sexual identity and orientation. Note, however, that religion, political party, or other ideological affiliation provide no exemptions for the behavior we outline as unacceptable in this Code of Conduct.
 
-:::tip
-
-Use the power of React to create interactive blog posts.
-
-:::
+Our Standards​
+Examples of behavior that contributes to creating a positive environment include:
 
 {/* truncate */}
+
+Using welcoming and inclusive language
+Being respectful of differing viewpoints and experiences
+Gracefully accepting constructive criticism
+Focusing on what is best for the community
+Showing empathy towards other community members
+Examples of unacceptable behavior by participants include:
+
+The use of sexualized language or imagery and unwelcome sexual attention or advances
+Trolling, insulting/derogatory comments, and personal or political attacks
+Public or private harassment
+Publishing others' private information, such as a physical or electronic address, without explicit permission
+Other conduct which could reasonably be considered inappropriate in a professional setting
 
 For example, use JSX to create an interactive button:
 
 ```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button onClick={() => alert("button clicked!")}>Click me!</button>
 ```
 
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<button onClick={() => alert("button clicked!")}>Click me!</button>
